--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,33 @@
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_marginBottom="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_web_24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_margin="4dp"
+                android:autoLink="web"
+                android:text="https://www.codeforgirls.org/"
+                android:textColor="#F8F8F7"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
     </LinearLayout>
+
+
 
 </LinearLayout>
