--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,8 +115,92 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+        <TextView
+            android:text="Bootcamps"
+            android:textColor="#F9FBFC"
+            android:textAlignment="center"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            />
 
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+
+                <LinearLayout
+                    android:layout_margin="12dp"
+                    android:padding="24dp"
+                    android:background="@android:color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:src="@drawable/bc_web" />
+
+                    <TextView
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="Web Development (Front-end)" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_margin="12dp"
+                    android:padding="24dp"
+                    android:background="@android:color/white"                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:src="@drawable/bc_android"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"/>
+
+                    <TextView
+                        android:text="Mobile App Development (Android)"
+                        android:gravity="center"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_margin="12dp"
+                    android:padding="24dp"
+                    android:background="@android:color/white"                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:src="@drawable/bc_python"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"/>
+
+                    <TextView
+                        android:text="Programming Basics with Python"
+                        android:gravity="center"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
+    </LinearLayout>
 
 
 </LinearLayout>
