--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,198 +9,202 @@
     android:orientation="vertical"
     >
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#673AB7"
-        android:padding="14dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/codeforgirls_logo" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:src="@drawable/codeforgirls" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#6F673AB7"
-        android:orientation="vertical"
-        android:padding="24dp">
-
-
-        <TextView
-            android:text="Business Info"
-            android:textColor="#F9FBFC"
-            android:textAlignment="center"
-            style="@style/TextAppearance.AppCompat.Display1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_marginBottom="24dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="#673AB7"
+            android:padding="14dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:layout_marginEnd="8dp"
-                android:src="@drawable/ic_business_24dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:src="@drawable/codeforgirls_logo" />
 
-            <TextView
-                android:layout_margin="4dp"
-                android:text="Code For Girls"
-                style="@style/TextAppearance.AppCompat.Body2"
+            <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
+                android:layout_height="200dp"
+                android:src="@drawable/codeforgirls" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginBottom="24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_marginEnd="8dp"
-                android:src="@drawable/ic_info_outline_24dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:layout_margin="4dp"
-                android:text="CODE FOR GIRLS is an organization that aims to empower girls in the tech industry by building a community of talented girls from all disciplines, teaching them how to code (a.k.a create magic from scratch), work together, and develop their personal and professional skills."
-                style="@style/TextAppearance.AppCompat.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_marginBottom="24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_marginEnd="8dp"
-                android:src="@drawable/ic_web_24dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:layout_margin="4dp"
-                android:autoLink="web"
-                android:text="https://www.codeforgirls.org/"
-                android:textColor="#F8F8F7"
-                style="@style/TextAppearance.AppCompat.Body2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:text="Bootcamps"
-            android:textColor="#F9FBFC"
-            android:textAlignment="center"
-            style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            />
+            android:background="#6F673AB7"
+            android:orientation="vertical"
+            android:padding="24dp">
 
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
 
-            <LinearLayout
+            <TextView
+                android:text="Business Info"
+                android:textColor="#F9FBFC"
+                android:textAlignment="center"
+                style="@style/TextAppearance.AppCompat.Display1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:padding="8dp"
+                />
+
+            <LinearLayout
+                android:layout_marginBottom="24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_marginEnd="8dp"
+                    android:src="@drawable/ic_business_24dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_margin="4dp"
+                    android:text="Code For Girls"
+                    style="@style/TextAppearance.AppCompat.Body2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginBottom="24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_marginEnd="8dp"
+                    android:src="@drawable/ic_info_outline_24dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_margin="4dp"
+                    android:text="CODE FOR GIRLS is an organization that aims to empower girls in the tech industry by building a community of talented girls from all disciplines, teaching them how to code (a.k.a create magic from scratch), work together, and develop their personal and professional skills."
+                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_marginBottom="24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_marginEnd="8dp"
+                    android:src="@drawable/ic_web_24dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_margin="4dp"
+                    android:autoLink="web"
+                    android:text="https://www.codeforgirls.org/"
+                    android:textColor="#F8F8F7"
+                    style="@style/TextAppearance.AppCompat.Body2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:text="Bootcamps"
+                android:textColor="#F9FBFC"
+                android:textAlignment="center"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                />
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 >
 
                 <LinearLayout
-                    android:layout_margin="12dp"
-                    android:padding="24dp"
-                    android:background="@android:color/white"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="horizontal"
+                    >
 
-                    <ImageView
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:src="@drawable/bc_web" />
-
-                    <TextView
-                        android:layout_width="200dp"
+                    <LinearLayout
+                        android:layout_margin="12dp"
+                        android:padding="24dp"
+                        android:background="@android:color/white"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="Web Development (Front-end)" />
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="200dp"
+                            android:layout_height="200dp"
+                            android:src="@drawable/bc_web" />
+
+                        <TextView
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Web Development (Front-end)" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_margin="12dp"
+                        android:padding="24dp"
+                        android:background="@android:color/white"                    android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:src="@drawable/bc_android"
+                            android:layout_width="200dp"
+                            android:layout_height="200dp"/>
+
+                        <TextView
+                            android:text="Mobile App Development (Android)"
+                            android:gravity="center"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_margin="12dp"
+                        android:padding="24dp"
+                        android:background="@android:color/white"                    android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:src="@drawable/bc_python"
+                            android:layout_width="200dp"
+                            android:layout_height="200dp"/>
+
+                        <TextView
+                            android:text="Programming Basics with Python"
+                            android:gravity="center"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
+            </HorizontalScrollView>
 
-                <LinearLayout
-                    android:layout_margin="12dp"
-                    android:padding="24dp"
-                    android:background="@android:color/white"                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:src="@drawable/bc_android"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"/>
-
-                    <TextView
-                        android:text="Mobile App Development (Android)"
-                        android:gravity="center"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_margin="12dp"
-                    android:padding="24dp"
-                    android:background="@android:color/white"                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:src="@drawable/bc_python"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"/>
-
-                    <TextView
-                        android:text="Programming Basics with Python"
-                        android:gravity="center"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
-        </HorizontalScrollView>
-
+        </LinearLayout>
     </LinearLayout>
 
-
-</LinearLayout>
+</androidx.core.widget.NestedScrollView>
