--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:orientation="vertical"
-    >
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,109 +42,86 @@
 
 
             <TextView
-                android:text="Business Info"
-                android:textColor="@color/colorAccent"
-                android:textAlignment="center"
                 style="@style/TextAppearance.AppCompat.Display1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
-                />
+                android:text="@string/business_info"
+                android:textAlignment="center"
+                android:textColor="@color/colorAccent" />
 
-            <LinearLayout
-                android:layout_marginBottom="24dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_marginEnd="8dp"
-                    android:src="@drawable/ic_business_24dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:layout_margin="4dp"
-                    android:text="Code For Girls"
-                    style="@style/TextAppearance.AppCompat.Body2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginBottom="24dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_marginEnd="8dp"
-                    android:src="@drawable/ic_info_outline_24dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:layout_margin="4dp"
-                    android:text="CODE FOR GIRLS is an organization that aims to empower girls in the tech industry by building a community of talented girls from all disciplines, teaching them how to code (a.k.a create magic from scratch), work together, and develop their personal and professional skills."
-                    style="@style/TextAppearance.AppCompat.Body1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_marginBottom="24dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_marginEnd="8dp"
-                    android:src="@drawable/ic_web_24dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:layout_margin="4dp"
-                    android:autoLink="web"
-                    android:text="https://www.codeforgirls.org/"
-                    android:textColor="@color/colorAccent"
-                    style="@style/TextAppearance.AppCompat.Body2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
 
             <TextView
-                android:text="Bootcamps"
-                android:textColor="#F9FBFC"
-                android:textAlignment="center"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:autoLink="web"
+                android:drawableLeft="@drawable/ic_business_24dp"
+                android:drawablePadding="11dp"
+                android:paddingVertical="4dp"
+                android:text="@string/code_for_girls"
+                android:textColor="@color/colorAccent" />
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:src="@drawable/ic_info_outline_24dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:text="@string/about_code_for_girls" />
+
+            </LinearLayout>
+
+
+            <TextView
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:autoLink="web"
+                android:drawableLeft="@drawable/ic_web_24dp"
+                android:drawablePadding="11dp"
+                android:text="https://www.codeforgirls.org/"
+                android:textColor="@color/colorAccent" />
+
+
+            <TextView
                 style="@style/TextAppearance.AppCompat.Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
-                />
+                android:text="@string/bootcamps"
+                android:textAlignment="center"
+                android:textColor="#F9FBFC" />
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
 
                     <LinearLayout
-                        android:layout_margin="12dp"
-                        android:padding="24dp"
-                        android:background="@color/colorAccent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:layout_margin="12dp"
+                        android:background="@color/colorAccent"
+                        android:orientation="vertical"
+                        android:padding="24dp">
 
                         <ImageView
                             android:layout_width="200dp"
@@ -157,47 +132,49 @@
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="Web Development (Front-end)" />
+                            android:text="@string/web_development_front_end" />
 
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_margin="12dp"
-                        android:padding="24dp"
-                        android:background="@color/colorAccent"                 android:layout_width="wrap_content"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:layout_margin="12dp"
+                        android:background="@color/colorAccent"
+                        android:orientation="vertical"
+                        android:padding="24dp">
 
                         <ImageView
-                            android:src="@drawable/bc_android"
                             android:layout_width="200dp"
-                            android:layout_height="200dp"/>
+                            android:layout_height="200dp"
+                            android:src="@drawable/bc_android" />
 
                         <TextView
-                            android:text="Mobile App Development (Android)"
-                            android:gravity="center"
                             android:layout_width="200dp"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="@string/mobile_app_development_android" />
 
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_margin="12dp"
-                        android:padding="24dp"
-                        android:background="@color/colorAccent"                 android:layout_width="wrap_content"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:layout_margin="12dp"
+                        android:background="@color/colorAccent"
+                        android:orientation="vertical"
+                        android:padding="24dp">
 
                         <ImageView
-                            android:src="@drawable/bc_python"
                             android:layout_width="200dp"
-                            android:layout_height="200dp"/>
+                            android:layout_height="200dp"
+                            android:src="@drawable/bc_python" />
 
                         <TextView
-                            android:text="Programming Basics with Python"
-                            android:gravity="center"
                             android:layout_width="200dp"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="@string/programming_basics_with_python" />
 
                     </LinearLayout>
 
