make bootcamps has same size

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,7 +117,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_margin="12dp"
                         android:background="@color/colorAccent"
                         android:orientation="vertical"
@@ -138,7 +138,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_margin="12dp"
                         android:background="@color/colorAccent"
                         android:orientation="vertical"
@@ -159,7 +159,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_margin="12dp"
                         android:background="@color/colorAccent"
                         android:orientation="vertical"
